[package]
name = "relation"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["rellib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rellib = { path = "rellib" }
urlencoding = "2"
url = "2"
clap = { version = "4.5", features = ["derive", "color", "help"] }
directories = "6"
toml = "*"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
