[package]
name = "relation"
version = "0.3.1"
edition = "2024"

[workspace]
members = ["macros"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
macros = { path = "macros" }
urlencoding = "2"
url = "2"
clap = { version = "4", features = ["derive", "color", "help"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
directories = "6"
libc = "0.2"
toml = "*"
signal-hook = "0.4"
ratatui = { version = "*", optional = true }
crossterm = { version = "*", optional = true }
anyhow = "1.0"
default-net = { version = "*", optional = true }
yaml_serde = "0.10"
interprocess = { version = "2", features = ["tokio"], optional = true }
tokio = { version = "1", features = ["macros", "net", "io-util", "rt-multi-thread", "signal", "time"], optional = true }

[build-dependencies]
bindgen = "0.72"

[features]
tui = ["dep:ratatui", "dep:crossterm", "dep:default-net"]
daemon = ["dep:interprocess", "dep:tokio"]
default = ["tui", "daemon"]

[[bin]]
name="relationd"
path="src/bin/relationd.rs"
required-features = ["daemon"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
